--- a/web/css/site.css
+++ b/web/css/site.css
@@ -171,3 +171,6 @@ a.desc:after {
     box-sizing: border-box; 
     height: 500px;
 }
+section.sidebar .treeview-menu > li > a {
+    padding: 5px 5px 5px 30px;
+}
