--- a/web/css/site.css
+++ b/web/css/site.css
@@ -227,3 +227,15 @@ div.info-box .progress .progress-bar{
 .vcenter{
     vertical-align: middle !important;
 }
+
+div.user-panel > .image > img{
+    width: 100%;
+    max-width: 40px;
+    height: 40px;
+}
+div.user-panel > .info{
+    padding: 10px 5px 0px 5px;
+}
+div.user-panel > .info > p{
+    margin-bottom: 0;
+}
