--- a/web/css/site.css
+++ b/web/css/site.css
@@ -233,11 +233,22 @@ div.user-panel > .image > img{
     max-width: 40px;
     height: 40px;
 }
+.sidebar-collapse div.user-panel > .image > img{
+    width: 100%;
+    max-width: 30px;
+    height: 30px;
+}
 div.user-panel > .info{
     padding: 10px 5px 0px 5px;
+
 }
 div.user-panel > .info > p{
     margin-bottom: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 150px;
+    font-size: 10px;
 }
 
 img.img-circle{
