--- a/web/css/site.css
+++ b/web/css/site.css
@@ -184,7 +184,8 @@ a.desc:after {
 section.sidebar .treeview-menu > li > a {
     padding: 5px 5px 5px 30px;
 }
-.gestion-prejuridica blockquote{
+.gestion-prejuridica blockquote,
+.gestion-juridica blockquote{
     font-size: 12px;
     margin: 0 0 20px 20px;
 }
