AJUSTES DE DISEÑO

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -189,10 +189,11 @@ section.sidebar .treeview-menu > li > a {
     font-size: 12px;
     margin: 0 0 20px 20px;
 }
-.gestion-juridica.popupProceso,
-.gestion-prejuridica.popupProceso{
+.gestion-juridica.popupProceso > .row,
+.gestion-prejuridica.popupProceso > .row{
     height: 300px;
     overflow-y: auto;
+    margin: 0;
 }
 .modal-body .invoice-col{
     border-right: 1px solid #e5e5e5;
